jwt token desteklendi

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RandDBCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "RandDBCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OnlineRandevu;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "Jwt": {
+    "Secret": "674dfd67-592c-8007-ad32-3fe49d69371e!",
+    "Issuer": "OnlineRandevu",
+    "Audience": "MyAppUsers", // Token'ı kullanacak olan kullanıcı grubu
+    "TokenLifetimeMinutes": "60" // Token geçerlilik süresi (opsiyonel)
   }
+
 }
